--- a/iPortfolio-1.0.0/index.html
+++ b/iPortfolio-1.0.0/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iPortfolio Bootstrap Template</title>
+  <title>portafolio de servicio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -98,7 +98,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Simón Montoya</h2>
-        <p>Mucho gusto!  <span class="typed" data-typed-items="Te invito a conocer mi portafolio de servicio...">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>Mucho gusto!  <span class="typed" data-typed-items="Te invito a conocer mi portafolio de servicio..."></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -129,7 +129,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>14 de Julio 2007</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Sitio web:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Sitio web:</strong> <span>simonmontoyarondon@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefono:</strong> <span>+57 3014470351</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Andes-Antioquia</Andes-Antioquia></span></li>
                 </ul>
@@ -253,7 +253,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>AI</span> <i class="val">90%</i></span>
+              <span class="skill"><span>AI</span> <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -275,6 +275,10 @@
         <h2>Resumen</h2>
         <p>Tengo habilidades técnicas con pensamiento creativo para transformar conceptos en aplicaciones de alto rendimiento. Además de capacidades de investigación y codificación.
        </p>
+       <p>Este es un párrafo es para generar un espacio.</p>
+<br>
+
+       
         <a href="./portafolio/Hoja_de_vida.pdf" class="btn btn-primary" download>Descargar CV</a>
       </div><!-- End Section Title -->
 
@@ -301,7 +305,7 @@
 
             <div class="resumen-item pb-0">
               <h4>Simón Montoya</h4>
-              <p><em>Tecnico en desarrollador de software.</em></p>
+              <p><em>Tecnico en desarrollado de software.</em></p>
               <ul>
                 <li>Andes-Antioquia</li>
                 <li>(3014470351)</li>
@@ -330,7 +334,7 @@
                 </h5>
               <p><em>Colombia </em></p>
               <ul>
-                <li>Diseño y desarrollo de aplicaciones web utilizando HTML, CSS, JAVASCRIPT
+                <li>Diseño y desarrollo de aplicaciones web utilizando HTML, CSS, JAVASCRIPT.
                   Colaboración en equipo a través de herramientas como Github y Google WorkSpace.
                   </li>
                 <li>Creación de script con Python. Diseño y creación de Base de datos SQL
@@ -366,7 +370,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>He tenido el privilejio de participar en diferentes proyectos web,pasando por la implementacion de herramientas innovadoras
+        <p>He tenido el privilejio de participar en diferentes proyectos web, pasando por la implementacion de herramientas innovadoras
       como chatbots basados en IA, paginas web responsivas, y la creacion de sistemas de gestion estudiantil. Cada proyecto en mi portafolio
       refleja un compromiso con cada proyecto abordado de forma responsable y profecional.
         </p>
@@ -384,7 +388,7 @@
             <li data-filter=".filter-books">Libros</li>
           </ul><!-- End Portfolio Filters -->
 
-        <div class="row gy-4 isotope-container" data aos= "fade-up" data-aos-delay="200" ">
+        <div class="row gy-4 isotope-container" data aos= "fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
