Primer commit: proyecto portafolio

--- a/iPortfolio-1.0.0/index.html
+++ b/iPortfolio-1.0.0/index.html
@@ -632,7 +632,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonios</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>A continuacion encontrara algunos testimonios de clientes satisfechos</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -744,7 +744,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contacto</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Explora mis servicios y descubre cómo puedo ayudarte a alcanzar tus objetivos. ¡Estoy aquí para escucharte y colaborar contigo en cada paso del camino!</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
